[package]
name = "reikna"
version = "0.12.2"
authors = ["Phillip Heikoop <phillip-h@users.noreply.github.com>"]

description = "A work in progress math library"
documentation = "https://phillip-h.github.io/reikna/reikna/index.html"
repository = "https://github.com/phillip-h/reikna"

keywords = ["math", "mathematics"]

license = "MIT"

[dependencies]
